# vodokanal

./: README.md  article.html  contacts.html  db.sqlite3  gallery.html  index.html  job.html  news.html  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_debt.py
images/photos/: Без_названия_1_hEM81Ny.jfif  Без_названия_u3RKsZN.jfif
main/: settings.py  urls.py
static/: article.css  job.css  news.css
static/js/: job.js
staticfiles/: news.css  style.css
staticfiles/js/: job.js
styles/: base.css  gallery.css  main.css
templates/: article.html  contacts.html  gallery.html  index.html  job.html  news.html
templates/registration/: login.html  signup.html
vodokanal/: admin.py  apps.py  models.py  urls.py  views.py
vodokanal/migrations/: 0001_initial.py  0002_remove_job_description_job_contact_job_requirement1_and_more.py  0003_remove_job_contact_remove_job_requirement1_and_more.py  0004_remove_job_description_job_contact_job_requirement1_and_more.py  0005_photo.py  0006_rename_photo_gallery.py  0007_rename_gallery_photo.py  0008_news.py
