[tool.poetry]
name = "vodokanal"
version = "0.1.0"
description = ""
authors = ["Aikanysh <lailievaa02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
